src/testData/analysis/unicodeBlocks.cr
'\u{1}'

'\u{1A}'

'\u{1Ab}'

'\u{1Ab2D}'

'\u{01Ab2D}'

'\u{10FFFF}'

'\u{<error descr="Invalid Unicode codepoint">110000</error>}'

'\u{<error descr="Invalid Unicode codepoint">AAAAAA</error>}'

"\u{1}"

"\u{1A}"

"\u{1Ab}"

"\u{1Ab2D}"

"\u{01Ab2D}"

"\u{10FFFF}"

"\u{<error descr="Invalid Unicode codepoint">110000</error>}"

"\u{<error descr="Invalid Unicode codepoint">AAAAAA</error>}"